feat: estimate fee endpoints
