# swagger.yaml
@@ -11,6 +11,7 @@ servers:
 
 tags:
   - name: Main
+  - name: Estimate
 
 paths:
   /different-amount:
@@ -83,6 +84,56 @@ paths:
               schema:
                 type: string
 
+  /estimate/different-amount:
+    post:
+      summary: This endpoint is used to estimate different-amount rune token to different addresses.
+      description: This endpoint is used to estimate different-amount rune token to different addresses.
+      tags:
+        - Estimate
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/EstimateDifferentAmount"
+      responses:
+        "200":
+          description: Different Amount Rune Airdrop Estimate Success!
+          content:
+            application/json:
+              schema:
+                type: string
+        "500":
+          description: Different Amount Rune Airdrop Estimate failed!
+          content:
+            application/json:
+              schema:
+                type: string
+
+  /estimate/same-amount:
+    post:
+      summary: This endpoint is used to estimate same amount rune token to different addresses.
+      description: This endpoint is used to estimate same amount rune token to different addresses.
+      tags:
+        - Estimate
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/EstimateSameAmount"
+      responses:
+        "200":
+          description: Same Amount Rune Airdrop Estimate Success!
+          content:
+            application/json:
+              schema:
+                type: string
+        "500":
+          description: Same Amount Rune Airdrop Estimate failed!
+          content:
+            application/json:
+              schema:
+                type: string
+
 components:
   schemas:
     differentAmount:
@@ -93,331 +144,331 @@ components:
           example: "2865619:198"
         feeRate:
           type: number
-          example: 20
+          example: 25
         data:
           type: string
           example:
             [
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1000,
+                "amount": 10,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1500,
+                "amount": 15,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2000,
+                "amount": 20,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2500,
+                "amount": 25,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3000,
+                "amount": 30,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3500,
+                "amount": 35,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4000,
+                "amount": 40,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4500,
+                "amount": 45,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1000,
+                "amount": 10,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1500,
+                "amount": 15,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2000,
+                "amount": 20,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2500,
+                "amount": 25,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3000,
+                "amount": 30,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3500,
+                "amount": 35,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4000,
+                "amount": 40,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4500,
+                "amount": 45,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1000,
+                "amount": 10,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1500,
+                "amount": 15,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2000,
+                "amount": 20,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2500,
+                "amount": 25,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3000,
+                "amount": 30,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3500,
+                "amount": 35,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4000,
+                "amount": 40,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4500,
+                "amount": 45,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1000,
+                "amount": 10,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1500,
+                "amount": 15,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2000,
+                "amount": 20,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2500,
+                "amount": 25,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3000,
+                "amount": 30,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3500,
+                "amount": 35,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4000,
+                "amount": 40,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4500,
+                "amount": 45,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1000,
+                "amount": 10,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1500,
+                "amount": 15,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2000,
+                "amount": 20,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2500,
+                "amount": 25,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3000,
+                "amount": 30,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3500,
+                "amount": 35,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4000,
+                "amount": 40,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4500,
+                "amount": 45,
               },
 
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1000,
+                "amount": 10,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1500,
+                "amount": 15,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2000,
+                "amount": 20,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2500,
+                "amount": 25,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3000,
+                "amount": 30,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3500,
+                "amount": 35,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4000,
+                "amount": 40,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4500,
+                "amount": 45,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1000,
+                "amount": 10,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1500,
+                "amount": 15,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2000,
+                "amount": 20,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2500,
+                "amount": 25,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3000,
+                "amount": 30,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3500,
+                "amount": 35,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4000,
+                "amount": 40,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4500,
+                "amount": 45,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1000,
+                "amount": 10,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1500,
+                "amount": 15,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2000,
+                "amount": 20,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2500,
+                "amount": 25,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3000,
+                "amount": 30,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3500,
+                "amount": 35,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4000,
+                "amount": 40,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4500,
+                "amount": 45,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1000,
+                "amount": 10,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1500,
+                "amount": 15,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2000,
+                "amount": 20,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2500,
+                "amount": 25,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3000,
+                "amount": 30,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3500,
+                "amount": 35,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4000,
+                "amount": 40,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4500,
+                "amount": 45,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1000,
+                "amount": 10,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 1500,
+                "amount": 15,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2000,
+                "amount": 20,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 2500,
+                "amount": 25,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3000,
+                "amount": 30,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 3500,
+                "amount": 35,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4000,
+                "amount": 40,
               },
               {
                 "address": "tb1p0sd5xq6sz0eg3r9j5df0qk38pgnuqreav2qqtq5jfvwpk3yhzuxqjyttjy",
-                "amount": 4500,
+                "amount": 45,
               },
             ]
       required:
@@ -433,10 +484,10 @@ components:
           example: "2865619:198"
         feeRate:
           type: number
-          example: 20
+          example: 25
         amount:
           type: number
-          example: 1000
+          example: 10
         addressList:
           type: string
           example:
@@ -458,3 +509,29 @@ components:
         - feeRate
         - amount
         - addressList
+
+    EstimateDifferentAmount:
+      type: object
+      properties:
+        feeRate:
+          type: number
+          example: 25
+        size:
+          type: number
+          example: 5000
+      required:
+        - feeRate
+        - size
+
+    EstimateSameAmount:
+      type: object
+      properties:
+        feeRate:
+          type: number
+          example: 25
+        size:
+          type: number
+          example: 5000
+      required:
+        - feeRate
+        - size
